- changing StringBuilder to String in model, interning it where it is needed